--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,25 @@
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/ATT/apache-log4j-2.23.1-bin/log4j-api-2.23.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Sarvadnya/Downloads/selenium-server-4.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sarvadnya/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar" sourcepath="C:/Users/Sarvadnya/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.relevantcodes"/>
+			<attribute name="maven.artifactId" value="extentreports"/>
+			<attribute name="maven.version" value="2.41.2"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Sarvadnya/.p2/pool/plugins/org.testng_6.11.0.r201704240320.jar" sourcepath="C:/Users/Sarvadnya/.p2/pool/plugins/org.testng.source_6.11.0.r201704240320.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sarvadnya/.m2/repository/org/testng/testng/7.10.2/testng-7.10.2.jar" sourcepath="C:/Users/Sarvadnya/.m2/repository/org/testng/testng/7.10.2/testng-7.10.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.groupId" value="org.testng"/>
+			<attribute name="maven.artifactId" value="testng"/>
+			<attribute name="maven.version" value="7.10.2"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
